# veriSQL

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: corpus.py  run_benchmark.py
docs/: LAUNCH_KIT.md  LIVE_DEMO.md
docs/superpowers/specs/: 2026-07-07-dbt-and-agent-integrations-design.md
examples/: agent_loop.py  compliance_gateway.py  make_demo_db.py  policy.yaml  quickstart.py  repair_rules.yaml
notebooks/: verisql_proof.ipynb
postgres-extension/: Makefile  README.md  verisql--0.1.0.sql  verisql.control
src/verisql/: __init__.py  agent.py  audit.py  cli.py  critic.py  dbt_gate.py  equivalence.py  history.py  mcp_server.py  policy.py  repair.py  repair_rules.py  report.py  verify.py
src/verisql/checks/: __init__.py  ast_parse.py  base.py  cartesian.py  date_coverage.py  explain_plan.py  filter_required.py  invariants.py  null_semantics.py  pii_access.py  schema.py  timestamp_equality.py  zero_row.py
src/verisql/connectors/: __init__.py  base.py  bigquery_conn.py  duckdb_conn.py  postgres_conn.py  snowflake_conn.py
src/verisql/integrations/: __init__.py  (+5 more)
tests/: conftest.py  test_ast_parse.py  test_audit.py  test_benchmark_gate.py  test_bugfixes.py  test_cartesian.py  test_critic_gating.py  test_critic_providers.py  test_date_coverage.py  test_dbt_gate.py  test_dialects.py  test_equivalence.py  test_explain_plan.py  test_filter_required.py  test_integrations_frameworks.py  test_integrations_guard.py  test_integrations_openai.py  test_invariants.py  test_mcp_server.py  test_new_bets.py  test_null_semantics.py  test_pii_access.py  test_policy_parsing.py  test_repair.py  test_schema_and_zero_row.py
